@@ -6,7 +6,7 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.stream.Stream;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -22,21 +22,25 @@ public class FeedProcessorTest {
 
    @Test
    public void oneFileWithOneLine() {
-      when(fileRepoMock.getFileNames()).thenReturn(Arrays.asList("one.txt"));
+      when(fileRepoMock.getFileNames()).thenReturn(List.of("one.txt"));
       when(fileRepoMock.openFile("one.txt")).thenReturn(Stream.of("one"));
       assertThat(feedProcessor.countPendingLines()).isEqualTo(1);
    }
 
    @Test
    public void oneFileWith2Lines() {
-      when(fileRepoMock.getFileNames()).thenReturn(Arrays.asList("two.txt"));
+      when(fileRepoMock.getFileNames()).thenReturn(List.of("two.txt"));
       when(fileRepoMock.openFile("two.txt")).thenReturn(Stream.of("one","two"));
       assertThat(feedProcessor.countPendingLines()).isEqualTo(2);
    }
 
    @Test
    public void twoFilesWith3Lines() {
-      // TODO
+      when(fileRepoMock.getFileNames()).thenReturn(List.of("one.txt", "two.txt"));
+      when(fileRepoMock.openFile("one.txt")).thenReturn(Stream.of("line1"));
+      when(fileRepoMock.openFile("two.txt")).thenReturn(Stream.of("line2", "line3"));
+
+      assertThat(feedProcessor.countPendingLines()).isEqualTo(3);
 
       // TODO How to DRY the tests?
    }
